nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: fedora/nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: storage-nginx
            mountPath: /usr/share/nginx/html
      volumes:
      - name: storage-nginx
        persistentVolumeClaim:
          claimName: pvc-fs
