nginx-svc-np.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nfs-nodeport
spec:
  type: NodePort
  ports:
  - port: 80               
    targetPort: 80
    name: http
    nodePort: 30080
  - port: 443
    targetPort: 443        
    name: https
    nodePort: 30443
  selector:                
    name: nginx-nfs
