nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nfs-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 443
    targetPort: 443
    name: https
  selector:
    name: nginx-nfs
